2005-05-04  Rob Savoye  <rob@blackpeter.welcomehome.org>

	* gameswf/gameswf_render_handler_ogl.cpp (render_handler): Added
	and slightly changed patch #1194680. This code now only gets
	executed when using a non default value for the LOD BIAS.

2005-05-01  Rob Savoye  <rob@bertha.welcomehome.org>

	* gameswf/gameswf_textformat.cpp (textformat_setformat): Set the
	flags if the corresponding members are set.

	* configure.ac: Add patch from sourceforge (#1186726) for checking
	xml option differently.
	* aclocal.m4, configure: Regenerated.
	* gameswf/gameswf_test_ogl.cpp: Add additional value to "-r" option
	to optionally disable sound. From same sourceforge patch
	#1186726.
	
2005-04-30  Rob Savoye  <rob@bertha.welcomehome.org>

	* base/container.h: Add support to tu_string for += char.
	Added new methods to tu_string, utf8_from_char(), utf8_to_upper(),
	utf8_to_lower().
	* base/container.cpp: Add functions for utf8_from_char(),
	utf8_to_upper(), utf8_to_lower().
	* gameswf/gameswf_action.h: Add operator!= to as_value.
	* gameswf/gameswf_action.cpp:  Add operator!= to as_value. Don't
	flag a "new String error", cause it's being used like this 
	"String.fromCharCode(67)" without needing an object to be created
	first.
	* gameswf/gameswf_string.h: Add support for fromCharCode,
	toUpperCase, toLowerCase.
	* gameswf/gameswf_string.cpp: Make string_new return a
	tu_string_as_object after attaching fromCharCode and charCodeAt
	members to it.
	* gameswf/gameswf_action.cpp: Add fromCharCode, toUpperCase,
	toLowerCase, to builtin string.
	* gameswf/gameswf_textformat.cpp: Initialize all data in
	constructor to -1 so we can tell if it's been set or not
	later. Add getTextFormat() support.
	* gameswf/gameswf_textformat.h: Make several values that were an
	int a float.
	* gameswf/gameswf_xmlsocket.cpp: Add a xmlsocket_xml_new so the
	socket class has a handle on the XML messages it's processing.
	
	* gameswf/gameswf_render_handler_ogl.cpp (apply): Set the Texture
	LOD BIAS.